--- a/package.json
+++ b/package.json
@@ -5,17 +5,20 @@
   "type": "module",
   "scripts": {
     "start": "node ./bin/www",
-    "test": "mocha",
+    "test": "mocha --exit",
     "lint": "eslint --cache --ext '.js,.json' .",
     "lint:fix": "yarn lint --fix"
   },
   "dependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "4.3.0",
     "cors": "^2.8.5",
     "debug": "4.3.1",
     "dotenv": "^8.2.0",
     "express": "~4.17.1",
     "helmet": "^3.22.0",
     "http-errors": "~1.8.0",
+    "mocha": "8.2.1",
     "mongoose": "^5.11.0",
     "morgan": "^1.10.0",
     "pug": "3.0.0"
@@ -24,8 +27,7 @@
     "babel-eslint": "^8.0.1",
     "eslint": "^7.16.0",
     "eslint-plugin-json": "^2.1.2",
-    "mocha": "^8.1.1",
-    "nodemon": "^2.0.3",
-    "supertest": "^6.0.0"
+    "eslint-plugin-mocha": "^8.0.0",
+    "nodemon": "^2.0.3"
   }
 }
