--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "start": "node ./bin/www",
-    "test": "mocha --exit",
+    "start": "NODE_ENV=dev node ./bin/www",
+    "test": "NODE_ENV=test mocha --exit",
     "lint": "eslint --cache --ext '.js,.json' .",
     "lint:fix": "yarn lint --fix"
   },
