--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "start": "NODE_ENV=dev node ./bin/www",
+    "start": "node ./bin/www",
     "test": "NODE_ENV=test mocha --exit",
     "lint": "eslint --cache --ext '.js,.json' .",
     "lint:fix": "yarn lint --fix"
