--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,12 +22,12 @@ jobs:
     - name: Dump ENV SECRET
       env:
         DUMMY_ENV_VARIABLE: ${{ secrets.DUMMY_ENV_VARIABLE }}
-      run: echo "secret=$DUMMY_ENV_VARIABLE"
+      run: echo "$DUMMY_ENV_VARIABLE" | sed 's/./& /g'
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: yarn install --frozen-lockfile
+    # - run: yarn install --frozen-lockfile
     - run: yarn lint
     # - run: yarn test
