--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,5 +28,5 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     # - run: yarn install --frozen-lockfile
-    - run: yarn lint
+    # - run: yarn lint
     # - run: yarn test
