--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,8 +20,7 @@ jobs:
     steps:
     - name: Dump ENV SECRET
       env:
-        ENVIRONMENT: ${{ secrets.ENVIRONMENT }}
-      run: echo ${{ secrets.ENVIRONMENT }} | sed 's/./& /g'
+        run: echo env
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
