--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -19,8 +19,7 @@ jobs:
 
     steps:
     - name: Dump ENV SECRET
-      env:
-        run: echo env
+      run: env
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
