--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -9,6 +9,18 @@ on:
   pull_request:
     branches: [ main ]
 jobs:
+  my-job:
+    name: Decrypt .env files
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Decrypt large secret
+        run: ./.github/scripts/decrypt_secret.sh
+        env:
+          LARGE_SECRET_PASSPHRASE: ${{ secrets.SECRET_PASSPHRASE }}
+      - name: Test printing your secret (Remove this step in production)
+        run: cat $HOME/env.dev
+     
   build:
 
     runs-on: ubuntu-latest
