--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -19,7 +19,7 @@ jobs:
         env:
           SECRET_PASSPHRASE: ${{ secrets.SECRET_PASSPHRASE }}
       - name: Test printing your secret (Remove this step in production)
-        run: cat $HOME/env.dev
+        run: cat .env.dev
      
   build:
 
