--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -9,33 +9,32 @@ on:
   pull_request:
     branches: [ main ]
 jobs:
-  my-job:
+  decrypt-secrets:
     name: Decrypt .env files
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v2
       - name: Decrypt large secret
         run: ./.github/scripts/decrypt_secret.sh
         env:
           SECRET_PASSPHRASE: ${{ secrets.SECRET_PASSPHRASE }}
-      - name: Test printing your secret (Remove this step in production)
-        run: cat .env.dev
      
-  # build:
-  #   runs-on: ubuntu-latest
+  build:
+    runs-on: ubuntu-latest
 
-  #   strategy:
-  #     matrix:
-  #       node-version: [13.x]
+    strategy:
+      matrix:
+        node-version: [13.x]
 
-  #   steps:
-  #   - name: Dump ENV SECRET
-  #     run: env
-  #   - uses: actions/checkout@v2
-  #   - name: Use Node.js ${{ matrix.node-version }}
-  #     uses: actions/setup-node@v1
-  #     with:
-  #       node-version: ${{ matrix.node-version }}
-    # - run: yarn install --frozen-lockfile
-    # - run: yarn lint
-    # - run: yarn test
+    steps:
+    - name: Dump ENV SECRET
+      run: env
+    - uses: actions/checkout@v2
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+    - run: yarn install --frozen-lockfile
+    - run: yarn lint
+    - run: yarn test
