--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,19 +22,19 @@ jobs:
       - name: Test printing your secret (Remove this step in production)
         run: ./print.sh
 
-  build:
-    runs-on: ubuntu-latest
+  # build:
+  #   runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [13.x]
+  #   strategy:
+  #     matrix:
+  #       node-version: [13.x]
 
-    steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    - run: yarn install --frozen-lockfile
-    - run: yarn lint
-    - run: yarn test
+  #   steps:
+  #   - uses: actions/checkout@v2
+  #   - name: Use Node.js ${{ matrix.node-version }}
+  #     uses: actions/setup-node@v1
+  #     with:
+  #       node-version: ${{ matrix.node-version }}
+  #   - run: yarn install --frozen-lockfile
+  #   - run: yarn lint
+  #   - run: yarn test
