--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,7 +5,7 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ experiments ]
+    branches: [ main ]
   pull_request:
     branches: [ main ]
 jobs:
