--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -9,17 +9,17 @@ on:
   pull_request:
     branches: [ main ]
 jobs:
-  decrypt-secrets-test:
+  run-all-tests:
     name: lint check and test node js app
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
-      - name: Decrypt large secret
+      - name: Decrypt secrets
         run: ./.github/scripts/decrypt_secret.sh
         env:
           SECRET_PASSPHRASE: ${{ secrets.SECRET_PASSPHRASE }}
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Setup Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
