--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,16 +1,18 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
-name: Tests
+name: Continuous Integration
 
 on:
   push:
-    branches: [ main ]
+    branches: [ azure ]
   pull_request:
     branches: [ main ]
+env:
+  AZURE_WEBAPP_NAME: storeapi
+  AZURE_WEBAPP_PACKAGE_PATH: '.'
+  NODE_VERSION: '14.x' 
+
 jobs:
-  run-all-tests:
-    name: lint check and test node js app
+  test-and-deploy:
+    name: Test and Deploy
     runs-on: ubuntu-latest
 
     steps:
@@ -19,10 +21,28 @@ jobs:
         run: ./.github/scripts/decrypt_secret.sh
         env:
           SECRET_PASSPHRASE: ${{ secrets.SECRET_PASSPHRASE }}
+
       - name: Setup Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - run: yarn install --frozen-lockfile
-      - run: yarn lint
-      - run: yarn test
+      - name: Install Dependencies
+        run: |
+          yarn install --frozen-lockfile
+
+      - name: Check Lint Errors
+        run: |
+          yarn lint
+
+      - name: Run Tests
+        run: |
+          # Run Unit tests and Upload test coverage report
+          yarn test
+          yarn coverage
+
+      - name: Deploy To Azure WebApp
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: ${{ env.AZURE_WEBAPP_NAME }}
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+          package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
