--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -2,7 +2,7 @@ name: Continuous Integration
 
 on:
   push:
-    branches: [ azure ]
+    branches: [ main ]
   pull_request:
     branches: [ main ]
 env:
