addeed auto populate on cart user info (#11)
* changed Cart endpoints to auto Populate user Info

Added new endpoints to Search  or Cart based on cartId or user Id

* cart auto populates user info

* updated tests

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint:fix": "yarn lint --fix"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "chai": "^4.2.0",
     "chai-http": "4.3.0",
     "codecov": "^3.8.1",
