--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "~4.17.1",
     "helmet": "^3.22.0",
     "http-errors": "~1.8.0",
+    "lodash": "^4.17.20",
     "mocha": "8.2.1",
     "mongoose": "^5.11.0",
     "morgan": "^1.10.0",
